# elote

./: TODO.md  pyproject.toml
elote/: __init__.py  cli.py  coerce.py
tests/: conftest.py  test_cli.py  test_coerce.py  test_transforms.py
